--- a/src/Module 7/Hands-on - Data Quality Assessment in Python/Ques_2.ipynb
+++ b/src/Module 7/Hands-on - Data Quality Assessment in Python/Ques_2.ipynb
@@ -24,26 +24,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns in the DataFrame: Index(['Age Violations: Empty DataFrame'], dtype='object')\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "\"Column 'Age' not found in DataFrame.\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 53\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df[df[column]\u001b[38;5;241m.\u001b[39misnull()]\n\u001b[1;32m     50\u001b[0m \u001b[38;5;66;03m# Example Usage\u001b[39;00m\n\u001b[1;32m     51\u001b[0m \n\u001b[1;32m     52\u001b[0m \u001b[38;5;66;03m# Checking for Age and Grade numerical accuracy (Age should be between 0 and 120, Grade should be 0-100)\u001b[39;00m\n\u001b[0;32m---> 53\u001b[0m age_violations \u001b[38;5;241m=\u001b[39m \u001b[43mcheck_numerical_accuracy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAge\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m120\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     54\u001b[0m grade_violations \u001b[38;5;241m=\u001b[39m check_numerical_accuracy(df, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGrade\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m100\u001b[39m)\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m# Validate email format\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[3], line 18\u001b[0m, in \u001b[0;36mcheck_numerical_accuracy\u001b[0;34m(df, column, min_value, max_value)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mcheck_numerical_accuracy\u001b[39m(df, column, min_value, max_value):\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m column \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m df\u001b[38;5;241m.\u001b[39mcolumns:\n\u001b[0;32m---> 18\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mColumn \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolumn\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m not found in DataFrame.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df[(df[column] \u001b[38;5;241m<\u001b[39m min_value) \u001b[38;5;241m|\u001b[39m (df[column] \u001b[38;5;241m>\u001b[39m max_value)]\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"Column 'Age' not found in DataFrame.\""
+      "Original Columns in the DataFrame: ['ID', 'Name', 'Age', 'Grade', 'Email']\n",
+      "Updated Columns in the DataFrame: ['ID', 'Name', 'Age', 'Grade', 'Email']\n",
+      "Age Violations: Empty DataFrame\n",
+      "Columns: [ID, Name, Age, Grade, Email]\n",
+      "Index: []\n",
+      "Grade Violations: Empty DataFrame\n",
+      "Columns: [ID, Name, Age, Grade, Email]\n",
+      "Index: []\n",
+      "Invalid Emails: Empty DataFrame\n",
+      "Columns: [ID, Name, Age, Grade, Email]\n",
+      "Index: []\n",
+      "Invalid Ages (non-integer):    ID           Name   Age  Grade                     Email\n",
+      "0   1       John Doe  20.0   85.0       johndoe@example.com\n",
+      "1   2     Jane Smith  22.0   90.0     janesmith@example.com\n",
+      "2   3    Bob Johnson  19.0   78.0    bobjohnson@example.com\n",
+      "3   4    Alice White  25.0   88.0    alicewhite@example.com\n",
+      "4   5  Charlie Brown  21.0   95.0  charliebrown@example.com\n",
+      "5   6      David Lee  23.0   82.0      davidlee@example.com\n",
+      "6   7    Emily Davis   NaN   92.0    emilydavis@example.com\n",
+      "7   8   Frank Harris  30.0    NaN   frankharris@example.com\n",
+      "8   9     Grace King  22.0   80.0     graceking@example.com\n",
+      "9  10    Henry Allen  18.0   70.0    henryallen@example.com\n",
+      "Missing Values per Column:\n",
+      "ID       0\n",
+      "Name     0\n",
+      "Age      1\n",
+      "Grade    1\n",
+      "Email    0\n",
+      "dtype: int64\n",
+      "Rows with Missing Data:\n",
+      "   ID          Name   Age  Grade                    Email\n",
+      "6   7   Emily Davis   NaN   92.0   emilydavis@example.com\n",
+      "7   8  Frank Harris  30.0    NaN  frankharris@example.com\n",
+      "Rows with Missing Emails:\n",
+      "Empty DataFrame\n",
+      "Columns: [ID, Name, Age, Grade, Email]\n",
+      "Index: []\n"
      ]
     }
    ],
@@ -54,11 +78,14 @@
     "# Load the dataset\n",
     "df = pd.read_csv('students.csv')\n",
     "\n",
-    "# Print column names to check for any hidden issues\n",
-    "print(\"Columns in the DataFrame:\", df.columns)\n",
+    "# Print the actual column names to check for any hidden issues\n",
+    "print(\"Original Columns in the DataFrame:\", list(df.columns))\n",
     "\n",
     "# Remove any leading or trailing spaces from column names\n",
     "df.columns = df.columns.str.strip()\n",
+    "\n",
+    "# Print the updated column names to confirm\n",
+    "print(\"Updated Columns in the DataFrame:\", list(df.columns))\n",
     "\n",
     "# Step 1: Check Accuracy\n",
     "\n",
