Add students.csv and implement data quality checks

--- a/src/Module 7/Hands-on - Data Quality Assessment in Python/Ques_2.ipynb
+++ b/src/Module 7/Hands-on - Data Quality Assessment in Python/Ques_2.ipynb
@@ -24,50 +24,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Original Columns in the DataFrame: ['ID', 'Name', 'Age', 'Grade', 'Email']\n",
-      "Updated Columns in the DataFrame: ['ID', 'Name', 'Age', 'Grade', 'Email']\n",
-      "Age Violations: Empty DataFrame\n",
-      "Columns: [ID, Name, Age, Grade, Email]\n",
-      "Index: []\n",
-      "Grade Violations: Empty DataFrame\n",
-      "Columns: [ID, Name, Age, Grade, Email]\n",
-      "Index: []\n",
-      "Invalid Emails: Empty DataFrame\n",
-      "Columns: [ID, Name, Age, Grade, Email]\n",
-      "Index: []\n",
-      "Invalid Ages (non-integer):    ID           Name   Age  Grade                     Email\n",
-      "0   1       John Doe  20.0   85.0       johndoe@example.com\n",
-      "1   2     Jane Smith  22.0   90.0     janesmith@example.com\n",
-      "2   3    Bob Johnson  19.0   78.0    bobjohnson@example.com\n",
-      "3   4    Alice White  25.0   88.0    alicewhite@example.com\n",
-      "4   5  Charlie Brown  21.0   95.0  charliebrown@example.com\n",
-      "5   6      David Lee  23.0   82.0      davidlee@example.com\n",
-      "6   7    Emily Davis   NaN   92.0    emilydavis@example.com\n",
-      "7   8   Frank Harris  30.0    NaN   frankharris@example.com\n",
-      "8   9     Grace King  22.0   80.0     graceking@example.com\n",
-      "9  10    Henry Allen  18.0   70.0    henryallen@example.com\n",
-      "Missing Values per Column:\n",
-      "ID       0\n",
-      "Name     0\n",
-      "Age      1\n",
-      "Grade    1\n",
-      "Email    0\n",
-      "dtype: int64\n",
-      "Rows with Missing Data:\n",
-      "   ID          Name   Age  Grade                    Email\n",
-      "6   7   Emily Davis   NaN   92.0   emilydavis@example.com\n",
-      "7   8  Frank Harris  30.0    NaN  frankharris@example.com\n",
-      "Rows with Missing Emails:\n",
-      "Empty DataFrame\n",
-      "Columns: [ID, Name, Age, Grade, Email]\n",
-      "Index: []\n"
+      "test_check_age_validity (__main__.TestDataQualityFunctions)\n",
+      "Test the validity of the age column. ... FAIL\n",
+      "test_check_column_missing (__main__.TestDataQualityFunctions)\n",
+      "Test checking for missing values in specific column. ... ok\n",
+      "test_check_null_values (__main__.TestDataQualityFunctions)\n",
+      "Test checking for rows with null values. ... FAIL\n",
+      "test_check_numerical_accuracy (__main__.TestDataQualityFunctions)\n",
+      "Test numerical accuracy for age and grade. ... FAIL\n",
+      "test_validate_email_format (__main__.TestDataQualityFunctions)\n",
+      "Test email validation. ... ok\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_check_age_validity (__main__.TestDataQualityFunctions)\n",
+      "Test the validity of the age column.\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_9146/24246295.py\", line 134, in test_check_age_validity\n",
+      "    self.assertEqual(len(result), 1, \"Should identify 1 invalid age.\")\n",
+      "AssertionError: 0 != 1 : Should identify 1 invalid age.\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_check_null_values (__main__.TestDataQualityFunctions)\n",
+      "Test checking for rows with null values.\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_9146/24246295.py\", line 119, in test_check_null_values\n",
+      "    self.assertEqual(len(result), 2, \"Should identify 2 rows with missing values.\")\n",
+      "AssertionError: 1 != 2 : Should identify 2 rows with missing values.\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_check_numerical_accuracy (__main__.TestDataQualityFunctions)\n",
+      "Test numerical accuracy for age and grade.\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_9146/24246295.py\", line 124, in test_check_numerical_accuracy\n",
+      "    self.assertEqual(len(result), 1, \"Should identify 1 invalid age.\")\n",
+      "AssertionError: 0 != 1 : Should identify 1 invalid age.\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 5 tests in 0.012s\n",
+      "\n",
+      "FAILED (failures=3)\n"
      ]
     }
    ],
@@ -75,84 +80,145 @@
     "import pandas as pd\n",
     "import re\n",
     "\n",
-    "# Load the dataset\n",
-    "df = pd.read_csv('students.csv')\n",
-    "\n",
-    "# Print the actual column names to check for any hidden issues\n",
-    "print(\"Original Columns in the DataFrame:\", list(df.columns))\n",
-    "\n",
-    "# Remove any leading or trailing spaces from column names\n",
-    "df.columns = df.columns.str.strip()\n",
-    "\n",
-    "# Print the updated column names to confirm\n",
-    "print(\"Updated Columns in the DataFrame:\", list(df.columns))\n",
-    "\n",
-    "# Step 1: Check Accuracy\n",
-    "\n",
-    "# 1.1 Verify Numerical Data Accuracy (Age and Grade should be within reasonable ranges)\n",
-    "def check_numerical_accuracy(df, column, min_value, max_value):\n",
-    "    if column not in df.columns:\n",
-    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
-    "    return df[(df[column] < min_value) | (df[column] > max_value)]\n",
-    "\n",
-    "# 1.2 Validate Email Format using regex\n",
-    "def validate_email_format(df, column):\n",
-    "    if column not in df.columns:\n",
-    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
-    "    email_pattern = r\"^[\\w\\.-]+@[\\w\\.-]+\\.\\w+$\"\n",
-    "    return df[~df[column].astype(str).str.match(email_pattern, na=False)]\n",
-    "\n",
-    "# 1.3 Integer Accuracy Check for Age (Check if Age is an integer)\n",
-    "def check_integer_accuracy(df, column):\n",
-    "    if column not in df.columns:\n",
-    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
-    "    return df[~df[column].apply(lambda x: isinstance(x, int))]\n",
-    "\n",
-    "# Step 2: Check Completeness\n",
-    "\n",
-    "# 2.1 Identify Missing Values in the whole DataFrame\n",
-    "def check_missing_values(df):\n",
-    "    return df.isnull().sum()\n",
-    "\n",
-    "# 2.2 Rows with Missing Data\n",
-    "def rows_with_missing_data(df):\n",
+    "# Function to check for missing values in a DataFrame\n",
+    "def check_null_values(df):\n",
+    "    \"\"\"\n",
+    "    Check for null values in the DataFrame.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    df (pandas.DataFrame): Input DataFrame to check for null values.\n",
+    "    \n",
+    "    Returns:\n",
+    "    pandas.DataFrame: Rows with null values.\n",
+    "    \"\"\"\n",
+    "    if not isinstance(df, pd.DataFrame):\n",
+    "        raise ValueError(\"Input must be a pandas DataFrame.\")\n",
+    "    \n",
     "    return df[df.isnull().any(axis=1)]\n",
     "\n",
-    "# 2.3 Column-Specific Missing Value Check\n",
-    "def check_column_specific_missing(df, column):\n",
+    "# Function to check numerical accuracy of a column\n",
+    "def check_numerical_accuracy(df, column, min_value, max_value):\n",
+    "    \"\"\"\n",
+    "    Check if the values in a numerical column fall within the specified range.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    df (pandas.DataFrame): Input DataFrame.\n",
+    "    column (str): Column name to check.\n",
+    "    min_value (int or float): Minimum valid value for the column.\n",
+    "    max_value (int or float): Maximum valid value for the column.\n",
+    "    \n",
+    "    Returns:\n",
+    "    pandas.DataFrame: Rows where values in the column are out of the specified range.\n",
+    "    \"\"\"\n",
     "    if column not in df.columns:\n",
     "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
+    "    \n",
+    "    if df[column].dtype not in ['int64', 'float64']:\n",
+    "        raise TypeError(f\"Column '{column}' must be numeric.\")\n",
+    "\n",
+    "    return df[(df[column] < min_value) | (df[column] > max_value)]\n",
+    "\n",
+    "# Function to validate email format using regex\n",
+    "def validate_email_format(df, column):\n",
+    "    \"\"\"\n",
+    "    Validate if email addresses in the specified column have the correct format.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    df (pandas.DataFrame): Input DataFrame.\n",
+    "    column (str): Column name to validate.\n",
+    "    \n",
+    "    Returns:\n",
+    "    pandas.DataFrame: Rows with invalid email format.\n",
+    "    \"\"\"\n",
+    "    if column not in df.columns:\n",
+    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
+    "    \n",
+    "    if not df[column].dtype == 'object':\n",
+    "        raise TypeError(f\"Column '{column}' must be of type string.\")\n",
+    "    \n",
+    "    email_regex = r'^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$'\n",
+    "    return df[~df[column].str.match(email_regex, na=False)]\n",
+    "\n",
+    "# Function to check if the age is valid\n",
+    "def check_age_validity(df, column, min_age=0, max_age=120):\n",
+    "    \"\"\"\n",
+    "    Ensure that the age values in the column are within a reasonable human range.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    df (pandas.DataFrame): Input DataFrame.\n",
+    "    column (str): Column name to check age validity.\n",
+    "    min_age (int): Minimum valid age (default is 0).\n",
+    "    max_age (int): Maximum valid age (default is 120).\n",
+    "    \n",
+    "    Returns:\n",
+    "    pandas.DataFrame: Rows with invalid age values.\n",
+    "    \"\"\"\n",
+    "    if column not in df.columns:\n",
+    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
+    "    \n",
+    "    return check_numerical_accuracy(df, column, min_age, max_age)\n",
+    "\n",
+    "# Function to check for missing values in a specific column\n",
+    "def check_column_missing(df, column):\n",
+    "    \"\"\"\n",
+    "    Check if a specific column has missing values.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    df (pandas.DataFrame): Input DataFrame.\n",
+    "    column (str): Column name to check for missing values.\n",
+    "    \n",
+    "    Returns:\n",
+    "    pandas.DataFrame: Rows where the specified column has missing values.\n",
+    "    \"\"\"\n",
+    "    if column not in df.columns:\n",
+    "        raise KeyError(f\"Column '{column}' not found in DataFrame.\")\n",
+    "    \n",
     "    return df[df[column].isnull()]\n",
     "\n",
-    "# Example Usage\n",
+    "# Unit tests for validation functions\n",
+    "import unittest\n",
     "\n",
-    "# Checking for Age and Grade numerical accuracy (Age should be between 0 and 120, Grade should be 0-100)\n",
-    "age_violations = check_numerical_accuracy(df, 'Age', 0, 120)\n",
-    "grade_violations = check_numerical_accuracy(df, 'Grade', 0, 100)\n",
+    "class TestDataQualityFunctions(unittest.TestCase):\n",
+    "    \n",
+    "    def setUp(self):\n",
+    "        \"\"\"Setup for unit tests - creating a sample dataframe.\"\"\"\n",
+    "        data = {\n",
+    "            'ID': [1, 2, 3, 4, 5, 6],\n",
+    "            'Name': ['John Doe', 'Jane Smith', 'Bob Johnson', 'Alice White', 'Charlie Brown', 'David Lee'],\n",
+    "            'Age': [20, 22, 19, 25, 21, None],\n",
+    "            'Grade': [85, 90, 78, 88, 95, None],\n",
+    "            'Email': ['johndoe@example.com', 'janesmith@example.com', 'bobjohnson@example.com', \n",
+    "                      'alicewhite@example.com', 'charliebrown@example.com', 'invalid-email']\n",
+    "        }\n",
+    "        self.df = pd.DataFrame(data)\n",
+    "    \n",
+    "    def test_check_null_values(self):\n",
+    "        \"\"\"Test checking for rows with null values.\"\"\"\n",
+    "        result = check_null_values(self.df)\n",
+    "        self.assertEqual(len(result), 2, \"Should identify 2 rows with missing values.\")\n",
+    "    \n",
+    "    def test_check_numerical_accuracy(self):\n",
+    "        \"\"\"Test numerical accuracy for age and grade.\"\"\"\n",
+    "        result = check_numerical_accuracy(self.df, 'Age', 0, 120)\n",
+    "        self.assertEqual(len(result), 1, \"Should identify 1 invalid age.\")\n",
     "\n",
-    "# Validate email format\n",
-    "invalid_emails = validate_email_format(df, 'Email')\n",
+    "    def test_validate_email_format(self):\n",
+    "        \"\"\"Test email validation.\"\"\"\n",
+    "        result = validate_email_format(self.df, 'Email')\n",
+    "        self.assertEqual(len(result), 1, \"Should identify 1 invalid email.\")\n",
     "\n",
-    "# Check for integer accuracy in Age\n",
-    "invalid_ages = check_integer_accuracy(df, 'Age')\n",
+    "    def test_check_age_validity(self):\n",
+    "        \"\"\"Test the validity of the age column.\"\"\"\n",
+    "        result = check_age_validity(self.df, 'Age', 0, 120)\n",
+    "        self.assertEqual(len(result), 1, \"Should identify 1 invalid age.\")\n",
+    "    \n",
+    "    def test_check_column_missing(self):\n",
+    "        \"\"\"Test checking for missing values in specific column.\"\"\"\n",
+    "        result = check_column_missing(self.df, 'Grade')\n",
+    "        self.assertEqual(len(result), 1, \"Should identify 1 row with missing grade.\")\n",
     "\n",
-    "# Check for missing values\n",
-    "missing_values = check_missing_values(df)\n",
-    "\n",
-    "# Rows with missing data\n",
-    "rows_with_missing = rows_with_missing_data(df)\n",
-    "\n",
-    "# Column-specific missing data (example: check missing emails)\n",
-    "missing_emails = check_column_specific_missing(df, 'Email')\n",
-    "\n",
-    "# Display results\n",
-    "print(f\"Age Violations: {age_violations}\")\n",
-    "print(f\"Grade Violations: {grade_violations}\")\n",
-    "print(f\"Invalid Emails: {invalid_emails}\")\n",
-    "print(f\"Invalid Ages (non-integer): {invalid_ages}\")\n",
-    "print(f\"Missing Values per Column:\\n{missing_values}\")\n",
-    "print(f\"Rows with Missing Data:\\n{rows_with_missing}\")\n",
-    "print(f\"Rows with Missing Emails:\\n{missing_emails}\")\n"
+    "if __name__ == \"__main__\":\n",
+    "    unittest.main(argv=[''], verbosity=2, exit=False)\n"
    ]
   }
  ],
